tests/compile_fail/boxed_local.stderr
error[E0597]: `hs` does not live long enough
  --> $DIR/boxed_local.rs:9:14
   |
7  |   let _boxed_local = {
   |       ------------ borrow later stored here
8  |     let mut hs = v8::HandleScope::new(&mut isolate);
9  |     let hs = hs.enter();
   |              ^^ borrowed value does not live long enough
10 |     Box::new(v8::Integer::new(hs, 123))
11 |   };
   |   - `hs` dropped here while still borrowed
